--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -42,8 +42,8 @@
             EMISSION<br>
           </span></div>
       </div>
-      <div style="text-align: center;"><img src="file:///D:/Utiles/laragon/www/wplocal2/eventapi/html/allevents/pngegg.png"
-          alt="nasa" title="nasa" style="width: 142px; height: 133px;"></div>
+      <div style="text-align: center;"><img src="pngegg.png" alt="nasa" title="nasa"
+          style="width: 142px; height: 133px;"></div>
       <div style="text-align: center;"></div>
     </div>
     <nav class="navbar navbar-default">
