--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -96,8 +96,10 @@
           <!--
 following 5 lines required to use Caltech Library Services for registering our DOIs for open data releases when a DOI exists.-->
           <br>
-          <a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf">PDF
-            Work Itinerary</a><br>
+          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf">PDF
+                Work Itinerary</a></b></div>
+          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"></a></b><br>
+          </div>
           <div class="tablesaw-overflow">
             <table class="tablesaw" data-tablesaw-sortable="" data-tablesaw-sortable-switch=""
               data-tablesaw-mode="columntoggle">
