--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1664,6 +1664,7 @@ following 5 lines required to use Caltech Library Services for registering our D
               txtFile.send();
               var txtDoc=txtFile.responseText;
               var lines = txtDoc.split("\r\n"); // values in lines[0], lines[1]...
+        			document.write(lines);
       </script>
       <br>
     </p>
