--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1650,7 +1650,7 @@ following 5 lines required to use Caltech Library Services for registering our D
     <p style="text-align: center;"> <b><u>READ EXTERNAL SOURCE</u></b></p>
     <p>
       <script>
-     	        var fileName = "https://www.gw-openscience.org/eventapi/ascii/GWTC-1-confident/";
+     	        var fileName = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/textTest.txt";
               var txtFile;
                     if (window.XMLHttpRequest)
                 {// code for IE7+, Firefox, Chrome, Opera, Safari
@@ -1665,8 +1665,7 @@ following 5 lines required to use Caltech Library Services for registering our D
               var txtDoc=txtFile.responseText;
               var lines = txtDoc.split("\r\n"); // values in lines[0], lines[1]...
         			document.write(lines);
-      </script>
-      <br>
+      </script> <br>
     </p>
     <br>
     <br>
