--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1656,7 +1656,7 @@ following 5 lines required to use Caltech Library Services for registering our D
                @param data File contents
                var fileName = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/textTest.txt";
                */
-        			var fileName = "https://www.gw-openscience.org/eventapi/ascii/GWTC-1-confident/";
+        			var fileName = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/data.txt";
               function handleFile(data) {
                 jQuery('#filecontents').html(data);
               }
