--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1658,7 +1658,9 @@ following 5 lines required to use Caltech Library Services for registering our D
                */
         			var fileName = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/textTest.txt";
               function handleFile(data) {
+                document.write('<p>');
                 jQuery('#filecontents').html(data);
+                document.write('</p>');
               }
 
               // Issue a request to load test_file as text (don't eval it, jQuery!).
@@ -1666,7 +1668,7 @@ following 5 lines required to use Caltech Library Services for registering our D
                          handleFile,
                          'text');
 
-              document.write('<p><div id="filecontents"></div></p>');
+              document.write('<div id="filecontents"></div>');
       </script> <br>
     </p>
     <br>
