--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1658,9 +1658,7 @@ following 5 lines required to use Caltech Library Services for registering our D
                */
         			var fileName = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/textTest.txt";
               function handleFile(data) {
-                document.write('<p>');
-                jQuery('#filecontents').html(data);
-                document.write('</p>');
+                jQuery('#filecontents').html('<p>'+data+'</p>');
               }
 
               // Issue a request to load test_file as text (don't eval it, jQuery!).
