--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1649,7 +1649,7 @@ following 5 lines required to use Caltech Library Services for registering our D
     </div>
     <p style="text-align: center;"> <b><u>READ EXTERNAL SOURCE</u></b></p>
     <p>
-      <script>
+      <script type="text/javascript">
               /**
                Callback for when jQuery has my file loaded. Places the
                content in the filecontents div.
@@ -1657,16 +1657,18 @@ following 5 lines required to use Caltech Library Services for registering our D
                var fileName = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/data.txt";
                */
         			var fileName = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/textTest.txt";
-              function handleFile(data) {
-                jQuery('#filecontents').html('<p>'+data+'</p>');
-              }
+ 
+        			document.getElementById(fileName) 
+              .addEventListener('change', function() { 
 
-              // Issue a request to load test_file as text (don't eval it, jQuery!).
-              jQuery.get(fileName,
-                         handleFile,
-                         'text');
+              var fr=new FileReader(); 
+              fr.onload=function(){ 
+                  document.getElementById('output') 
+                          .textContent=fr.result; 
+              } 
 
-              document.write('<div id="filecontents"></div>');
+              fr.readAsText(this.files[0]); 
+        }) 
       </script> <br>
     </p>
     <br>
