--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1666,9 +1666,10 @@ following 5 lines required to use Caltech Library Services for registering our D
                    handleFile,
                    'text');
 
-        document.write('<div id="filecontents"></div>');
+        /* document.write('<div id="filecontents"></div>'); */
         
       </script> <br>
+      <div id="filecontents"></div>
     </p>
     <br>
     <br>
