--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1675,7 +1675,7 @@ following 5 lines required to use Caltech Library Services for registering our D
         */
         function displayClassList() {
 
-        var path="ClassList.csv"
+        var path="descarga.csv"
         var fso = new ActiveXObject('Scripting.FileSystemObject'),
         iStream=fso.OpenTextFile(path, 1, false);
 
