--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1675,8 +1675,8 @@ following 5 lines required to use Caltech Library Services for registering our D
         {
           // obtain input element through DOM 
 
-          /* var file = document.getElementById('file').files[0]; */
-          var file = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/textTest.txt";
+          var file = document.getElementById('file').files[0];
+          /* var file = "https://walterm128.github.io/nasaappweb/eventapi/html/allevents/textTest.txt"; */
           if(file)
           {
             getAsText(file);
