--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1723,7 +1723,8 @@ following 5 lines required to use Caltech Library Services for registering our D
         function loaded(evt)
         {
           // Obtain the read file data    
-          var fileString = evt.target.result;
+          /* var fileString = evt.target.result; */
+          var fileString = fileName;
           document.getElementById('output').innerHTML = fileString;
             document.getElementById("bar").style.width = 100 + "%";
         }
