--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -78,7 +78,7 @@ following 5 lines required to use Caltech Library Services for registering our D
               Catalog: <a href="../.." style="color:#9FF">O3_Discovery_Papers</a>
               <br>
               <br>
-              GraceDB: <a href="gracedb.ligo.org%5Csuperevents%5CS190814bv%5Cindex.html"
+              GraceDB: <a href="gracedb.ligo.org/superevents/S190814bv/index.html"
                 style="color:#9FF">S190814bv</a> <br>
               <br>
               GCN: <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/notices_l/S190814bv.lvc">Notices</a>
