--- a/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
+++ b/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
@@ -13,8 +13,7 @@
     <link type="text/css" rel="stylesheet" href="../../static/ekko-lightbox/dist/ekko-lightbox.css" />
     <link rel="stylesheet" href="../../static/trumbowyg/dist/ui/trumbowyg.min.css" />
     <!--
-      <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono&display=fallback">
-      <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Alegreya:700" rel="stylesheet" type="text/css" />
+      <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono&display=fallback">      <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Alegreya:700" rel="stylesheet" type="text/css" />
       <style>body,input{font-family:"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"Roboto Mono","Courier New",Courier,monospace}</style>-->
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,8 +33,7 @@
 
      </script>
     <!--
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
     <script src="../../../ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../../../cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.js"></script>
     <script src="../../static/trumbowyg/dist/trumbowyg.min.js"></script>
@@ -563,16 +561,14 @@ require([
 });
 
 
-</script>
-    <script>
+</script> <script>
  function clickConfirm() {
    return confirm("  ");
 }
-</script>
-  </head>
+</script> </head>
   <body id="" class="tundra eventDetail">
     <nav class="navbar navbar-expand-md navbar-gracedb navbar-dark"> <a class="navbar-brand text-white"
-        href="https://gracedb.ligo.org/"> <img src="file:///D:/Utiles/laragon/www/wplocal2/eventapi/html/allevents/PngItem_2522307.png"
+        href="https://gracedb.ligo.org/"> <img src="../../../PngItem_2522307.png"
           style="width:40px;" alt="Einstein" title="Einstein" /> GraceDB </a> <button
         class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span> </button>
@@ -744,11 +740,10 @@ require([
                 <p></p>
                 <p> <button class="btn btn-primary" type="button" data-toggle="collapse"
                     data-target="#sky_loc" aria-expanded="true" aria-controls="sky_loc">
-                    Sky Localization </button>
-                  <button class="btn btn-primary" type="button" data-toggle="collapse"
-                    data-target="#em_follow" aria-expanded="true" aria-controls="em_follow">
-                    EM Followup </button>
-                </p>
+                    Sky Localization </button> <button class="btn btn-primary"
+                    type="button" data-toggle="collapse" data-target="#em_follow"
+                    aria-expanded="true" aria-controls="em_follow"> EM Followup
+                  </button> </p>
                 <p></p>
                 <div class="collapse show" id="sky_loc">
                   <div class="card card-body">
@@ -1003,8 +998,7 @@ require([
                   <br />
                   <button class="btn btn-secondary btn-sm" type="button" data-toggle="collapse"
                     data-target="#sky_loc" aria-expanded="true" aria-controls="sky_loc">
-                    Collapse Sky Localization </button>
-                </div>
+                    Collapse Sky Localization </button> </div>
                 <p></p>
                 <p></p>
                 <div class="collapse show" id="em_follow">
@@ -1118,8 +1112,7 @@ require([
                   <br />
                   <button class="btn btn-secondary btn-sm" type="button" data-toggle="collapse"
                     data-target="#em_follow" aria-expanded="true" aria-controls="em_follow">
-                    Collapse EM Followup </button>
-                </div>
+                    Collapse EM Followup </button> </div>
                 <p></p>
               </center>
               <p></p>
@@ -3352,8 +3345,8 @@ class="trumbowyg-editor"></textarea> </div>
     $('.trumbowyg-editor').prev(".trumbowyg-editor").css("min-height", "100px");
 </script><!-- js/ajax for superevent requests -->
         <!-- this is partially motivated by superevent posts 
-     not 302'ing the user back to the se view page after     submitting. This bit of ajax should trigger a page reload
-     after 'success' without resubmitting the form --->DEMO PAGE SOURCE GRACE DB
+     not 302'ing the user back to the se view page after     submitting. This bit of ajax should trigger a page reload     after 'success' without resubmitting the form --->DEMO
+        PAGE SOURCE GRACE DB
         <script>
 $(".se-submit-form").submit(function(event){
     event.preventDefault(); //prevent default action
