--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -767,7 +767,7 @@ FrameChannels: [ H1:DCS-CALIB_STRAIN_CLEAN_C01, L1:DCS-CALIB_STRAIN_CLEAN_C01, V
     <footer class="page-footer" style="background:#474;">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-12"><br>
+          <div class="col-sm-12">DEMO PAGE<br>
           </div>
         </div>
         <div class="row">
