--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1711,7 +1711,7 @@ following 5 lines required to use Caltech Library Services for registering our D
     <footer class="page-footer" style="background:#3366ff;">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-12"><u><b>Data Sources</b></u>: <a href="https://www.gw-openscience.org/"
+          <div class="col-sm-12"><u><b>DEMO PAGE Data Sources</b></u>: <a href="https://www.gw-openscience.org/"
               style="color: black;">GWOSC (click on the logo to go)</a><br>
           </div>
         </div>
