--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -28,15 +28,17 @@
     <div class="container-fluid" style="background: #547abb; box-shadow: 0 0px 8px #555; margin: 0 0 1px 0; border-bottom: .3em solid #3d4f78;">
       <div class="row">
         <div class="col-sm-10" style="padding: 40px 10px;">
-          <table style="width: 100%" border="1">
+          <table style="width: 100%" border="0">
             <tbody>
               <tr>
                 <td><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><img
                       src="PngItem_2522307.png" alt="E" title="e" style="width: 90px; height: 146px;"></span></td>
-                <td><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">BUSCAR
-                    ONDAS GRAVITACIONALES</span>
-                  <div class="col-sm-10" style="padding: 40px 10px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">FUENTE
-                      GWOSC</span></div>
+                <td><span style="color: rgb(255, 255, 255); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 32px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">&nbsp;SEARCH
+                    FOR GRAVITATIONAL WAVES</span>
+                  <div class="col-sm-10" style="padding: 40px 10px;"><span style="color: rgb(255, 255, 255); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 32px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">GAMMA
+                      RAYS - SUPERNOVA&nbsp; AND</span></div>
+                  <div class="col-sm-10" style="padding: 40px 10px;"><span style="color: rgb(255, 255, 255); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 32px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">ELECTROMAGNETIC
+                      EMISSION</span></div>
                 </td>
               </tr>
             </tbody>
@@ -63,45 +65,55 @@ following 5 lines required to use Caltech Library Services for registering our D
       <div class="row">
         <div class="col-sm-7 col-sm-offset-0">
           <div class="card" style="color:white;padding:20px; background-color:#444;">
-            <div class="card-body" style="word-wrap:break-word;"> <a href="/o3_eventdata_docs/"
-                style="color:#9FF">Documentation</a> <br>
-              <br>
-              Version: v1 <br>
-              <br>
-              All Versions: <a href="/eventapi/html/O3_Discovery_Papers/GW190814/v1/"
-                style="color:#9FF"> v1</a> <br>
-              <br>
-              GPS: 1249852257.0 <br>
-              <br>
-              UTC Time: 2019-08-14 21:10 <br>
-              <br>
-              Catalog: <a href="../.." style="color:#9FF">O3_Discovery_Papers</a>
-              <br>
-              <br>
-              GraceDB: <a href="gracedb.ligo.org/superevents/S190814bv/index.html"
-                style="color:#9FF">S190814bv (HERE DEMO LINK)</a> <br>
-              <br>
-              GCN: <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/notices_l/S190814bv.lvc">Notices</a>
-              • <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/other/GW190814bv.gcn3">Circulars</a>
-              <br>
-              <br>
-              Timeline: <a href="/timeline/query/eventapi/GW190814-v1" style="color:#9FF">Query
-                for segments</a> <br>
+            <div class="card-body" style="word-wrap:break-word;"> <br>
+              <table style="width: 100%" border="0">
+                <tbody>
+                  <tr>
+                    <td><a href="/o3_eventdata_docs/" style="color:#9FF">Documentation</a>
+                      <br>
+                      <br>
+                      Version: v1 <br>
+                      <br>
+                      All Versions: <a href="/eventapi/html/O3_Discovery_Papers/GW190814/v1/"
+                        style="color:#9FF"> v1</a> <br>
+                      <br>
+                      GPS: 1249852257.0<br>
+                      <br>
+                      UTC Time: 2019-08-14 21:10 <br>
+                      <br>
+                      Catalog: <a href="../.." style="color:#9FF">O3_Discovery_Papers</a>
+                      <br>
+                      <br>
+                      GraceDB: <a href="gracedb.ligo.org/superevents/S190814bv/index.html"
+                        style="color:#9FF">S190814bv (HERE DEMO LINK)</a> <br>
+                      <br>
+                      GCN: <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/notices_l/S190814bv.lvc">Notices</a>
+                      • <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/other/GW190814bv.gcn3">Circulars</a>
+                      <br>
+                      <br>
+                      Timeline: <a href="/timeline/query/eventapi/GW190814-v1"
+                        style="color:#9FF">Query for segments</a> <br>
+                      <div class="card-body" style="word-wrap:break-word;"><br>
+                      </div>
+                      <div class="card-body" style="word-wrap:break-word;">Tresuremap
+                        Link: <a href="http://treasuremap.space/alerts?graceids=S190930t">s19
+                          (HERE DEMO LINK)</a><br>
+                      </div>
+                      <div class="card-body" style="word-wrap:break-word;"><br>
+                      </div>
+                      DOI: <a href="https://doi.org/10.7935/zzw5-ak90" style="color:#9FF">https://doi.org/10.7935/zzw5-ak90</a></td>
+                    <td style="text-align: center;"><img src="GW190814-v1-H1-qscan.png"
+                        alt="T" title="T" style="width: 578px; height: 289px;"></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-            <div class="card-body" style="word-wrap:break-word;"><br>
-            </div>
-            <div class="card-body" style="word-wrap:break-word;">Tresuremap
-              Link: <a href="http://treasuremap.space/alerts?graceids=S190930t">s19
-                (HERE DEMO LINK)</a><br>
-            </div>
-            <div class="card-body" style="word-wrap:break-word;"><br>
-            </div>
-            <div class="card-body" style="word-wrap:break-word;">DOI: <a href="https://doi.org/10.7935/zzw5-ak90"
-                style="color:#9FF">https://doi.org/10.7935/zzw5-ak90</a></div>
           </div>
           <div class="card" style="color:black;background-color:#EEE; padding:20px; margin-top:20px;margin-bottom:20px">
-            <div class="card-body"><img src="GW190814-v1-H1-qscan.png" alt="T" title="T"
-                style="width: 578px; height: 289px;"><br>
+            <div class="card-body">
+              <div style="text-align: center;">
+                <h1><b><u>ADVANCED DATA</u></b></h1>
+              </div>
               <div style="white-space:pre-wrap; word-break:normal;">	 </div>
             </div>
           </div>
@@ -109,8 +121,8 @@ following 5 lines required to use Caltech Library Services for registering our D
             <div class="card-body">
               <div style="text-align: center;"><b><u>
                     <!-- <pre style='white-space:pre-wrap; word-break:normal; background-color:#F1F1F1; font-family: "Times New Roman", Times, serif;'>Data sourced from frame channels.
-FrameChannels: [ H1:DCS-CALIB_STRAIN_CLEAN_C01, L1:DCS-CALIB_STRAIN_CLEAN_C01, V1:Hrec_hoft_16384Hz ]Data sourced from frame types:FrameTypes: [ H1_HOFT_C01, L1_HOFT_C01, V1Online ]To open GWF files, use channels names as shown for GWTC-1: https://doi.org/10.7935/82H3-HH23	 </pre><br/> -->ADVANCED
-                    DATA</u></b></div>
+FrameChannels: [ H1:DCS-CALIB_STRAIN_CLEAN_C01, L1:DCS-CALIB_STRAIN_CLEAN_C01, V1:Hrec_hoft_16384Hz ]Data sourced from frame types:FrameTypes: [ H1_HOFT_C01, L1_HOFT_C01, V1Online ]To open GWF files, use channels names as shown for GWTC-1: https://doi.org/10.7935/82H3-HH23	 </pre><br/> --><br>
+                  </u></b></div>
               <h2 style="font-size:1.4em;color:#EEE;">GW190814 PE with combined</h2>
               <button class="btn btn-primary" type="button" data-toggle="collapse"
                 data-target="#O3_Discovery_Papers_GW190814_R1_pe_combined" aria-expanded="true"
