--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1721,9 +1721,9 @@ following 5 lines required to use Caltech Library Services for registering our D
               style="padding:10px;" height="55"> <img src="../../../static/images/cnrs_logo.png"
               style="padding:10px;" height="55"> <a href="https://www.ligo.org"><img
                 src="../../../static/images/ligologo_crop.gif" style="padding:10px;"
-                height="55"></a> <img src="../../../static/images/lsc.gif" style="padding:10px;"
-              height="55"> <img src="../../../static/images/ego_logo.png" style="padding:10px;"
-              height="55"> <img src="../../../static/images/logo-virgo-transp_bckg.png"
+                height="55"></a> <a href="https://www.ligo.org"><img src="../../../static/images/lsc.gif"
+                style="padding:10px;" height="55"></a> <img src="../../../static/images/ego_logo.png"
+              style="padding:10px;" height="55"> <img src="../../../static/images/logo-virgo-transp_bckg.png"
               style="padding:10px;" height="55"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
                 alt="Creative Commons License" style="border-width:0" src="../../../static/images/by.png"
                 height="40px"></a> </div>
