--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -65,8 +65,10 @@ following 5 lines required to use Caltech Library Services for registering our D
       <div class="row">
         <div class="col-sm-7 col-sm-offset-0">
           <div class="card" style="color:white;padding:20px; background-color:#444;">
-            <div class="card-body" style="word-wrap:break-word;"> <u><b>HUB
-                  DATA</b></u><br>
+            <div class="card-body" style="word-wrap:break-word;">
+              <div style="text-align: center;">
+                <h1><u><b>HUB DATA</b></u></h1>
+              </div>
               <table style="width: 100%" border="0">
                 <tbody>
                   <tr>
