--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -32,18 +32,29 @@
     <div class="container-fluid" style="background: #2041a5; box-shadow: 0 0px 8px #555; margin: 0 0 1px 0; border-bottom: .3em solid #3d4f78;">
       <div class="row">
         <div class="col-sm-2  col-sm-offset-0" style="padding: 10px 10px;"><a href="https://www.gw-openscience.org/">
-            <img src="PngItem_2522307.png" style="max-width:140px" alt="Einstein"
-              title="Einstein" width="100%"></a> </div>
-        <div class="col-sm-10" style="padding: 40px 10px;"> <span style="font-size:2.0em;color:#FFF;line-height:1.2em;">SEARCH
-            FOR GRAVITATIONAL WAVES</span></div>
-        <div class="col-sm-10" style="padding: 40px 10px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">GAMMA
-            RAYS - SUPERNOVA&nbsp; AND</span></div>
-        <div class="col-sm-10" style="padding: 40px 10px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">ELECTROMAGNETIC
-            EMISSION<br>
-          </span></div>
+          </a> </div>
+        <div class="col-sm-10" style="padding: 40px 10px;"> <span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span></div>
+        <div class="col-sm-10" style="padding: 40px 10px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span>
+          <table style="width: 893px; height: 285px;" border="0">
+            <tbody>
+              <tr>
+                <td><a href="https://www.gw-openscience.org/"><img src="PngItem_2522307.png"
+                      style="max-width:140px" alt="Einstein" title="Einstein" width="100%"></a></td>
+                <td><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">SEARCH
+                    FOR GRAVITATIONAL WAVES</span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><br>
+                    GAMMA RAYS - SUPERNOVA&nbsp; AND<br>
+                  </span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">ELECTROMAGNETIC
+                    EMISSION</span></td>
+              </tr>
+              <tr>
+                <td colspan="2" style="text-align: center;"><img src="pngegg.png"
+                    alt="nasa" title="nasa" style="width: 142px; height: 133px;"></td>
+              </tr>
+            </tbody>
+          </table>
+          <span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span></div>
       </div>
-      <div style="text-align: center;"><img src="pngegg.png" alt="nasa" title="nasa"
-          style="width: 142px; height: 133px;"></div>
+      <div style="text-align: center;"></div>
       <div style="text-align: center;"></div>
     </div>
     <nav class="navbar navbar-default">
