--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -90,6 +90,8 @@
               style="color:#000"><span class="glyphicon glyphicon-question-sign"></span>
               Help</a> </div>
           <h1>Outstanding events</h1>
+          <h1>Data Hub</h1>
+          <p></p>
           <table style="width: 100%" border="0">
             <tbody>
               <tr align="center">
@@ -1616,6 +1618,8 @@ following 5 lines required to use Caltech Library Services for registering our D
       </div>
     </div>
     <p style="text-align: center;"> <b><u>READ EXTERNAL SOURCE</u></b></p>
+    <p style="text-align: center;"><b><u>READ CSV FILE FROM</u></b><br>
+      <u><b><a href="https://www.gw-openscience.org/" style="color: black;">GWOSC</a></b></u></p>
     <p>
       <script>
         /**
