--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1617,9 +1617,10 @@ following 5 lines required to use Caltech Library Services for registering our D
         </div>
       </div>
     </div>
-    <p style="text-align: center;"> <b><u>READ EXTERNAL SOURCE</u></b></p>
-    <p style="text-align: center;"><b><u>READ CSV FILE FROM</u></b><br>
-      <u><b><a href="https://www.gw-openscience.org/" style="color: black;">GWOSC</a></b></u></p>
+    <p style="text-align: center;"> <b>READ EXTERNAL SOURCE</b></p>
+    <p style="text-align: center;"><b>READ CSV FILE FROM</b><br>
+      <u><b><a href="https://www.gw-openscience.org/eventapi/csv/GWTC-1-confident/"
+            style="color: black;" target="_blank">GWOSC</a></b></u></p>
     <p>
       <script>
         /**
