--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -64,7 +64,7 @@ following 5 lines required to use Caltech Library Services for registering our D
       </div>
       <div class="row">
         <div class="col-sm-7 col-sm-offset-0">
-          <div class="card" style="color:white;padding:20px; background-color:#444;">
+          <div class="card" style="color:white;padding:20px; background-color:#1d91fd;">
             <div class="card-body" style="word-wrap:break-word;">
               <div style="text-align: center;">
                 <h1><u><b>DATA HUB</b></u></h1>
