--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -111,6 +111,11 @@ following 5 lines required to use Caltech Library Services for registering our D
           <br>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf">PDF
                 Work Itinerary</a></b></div>
+          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><br>
+              </a></b></div>
+          <div style="text-align: center;"><b><a href="https://gracedb.ligo.org/superevents/public/O3/">PUBLIC
+                ALERT BY LIGO (EXTERNAL DATA)<br>
+              </a></b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"></a></b><br>
           </div>
           <div class="tablesaw-overflow">
