--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -48,7 +48,7 @@
               </tr>
               <tr>
                 <td colspan="2" style="text-align: center;"><img src="pngegg.png"
-                    alt="nasa" title="nasa" style="width: 142px; height: 133px;"></td>
+                    alt="NASA" title="NASA" style="width: 142px; height: 133px;"></td>
               </tr>
             </tbody>
           </table>
@@ -113,8 +113,15 @@ following 5 lines required to use Caltech Library Services for registering our D
                 Work Itinerary</a></b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><br>
               </a></b></div>
+          <div style="text-align: center;"><b><i>LINKS EXTERNAL INFORMATION</i><br>
+            </b></div>
+          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><br>
+              </a></b></div>
           <div style="text-align: center;"><b><a href="https://gracedb.ligo.org/superevents/public/O3/">PUBLIC
                 ALERT BY LIGO (EXTERNAL DATA)<br>
+              </a></b></div>
+          <div style="text-align: center;"><b><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy">GRAVITY
+                SPY<br>
               </a></b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"></a></b><br>
           </div>
@@ -1713,9 +1720,11 @@ following 5 lines required to use Caltech Library Services for registering our D
             // The file could not be read
             document.getElementById('output').innerHTML = "Error reading file..."
           }
-        }
-        
-      </script> <br>
+        } </script></p>
+    <p><br>
+    </p>
+    <div style="text-align: center;"><img src="bunnysuitadj1.jpg" alt="LIGO" title="LIGO"></div>
+    <p><br>
       <input id="file" multiple="" onchange="startRead()" type="file"> </p>
     <h3>Progress:</h3>
     <div style="width:100%;height:20px;border:1px solid black;">
