--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -123,6 +123,8 @@ following 5 lines required to use Caltech Library Services for registering our D
           <div style="text-align: center;"><b><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy">GRAVITY
                 SPY<br>
               </a></b></div>
+          <div style="text-align: center;"><b><a href="LEARN.html">LEARN GRAVITY<br>
+              </a></b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"></a></b><br>
           </div>
           <div class="tablesaw-overflow">
