--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -31,8 +31,8 @@
           <table style="width: 100%" border="0">
             <tbody>
               <tr>
-                <td><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><img
-                      src="PngItem_2522307.png" alt="E" title="e" style="width: 90px; height: 146px;"></span></td>
+                <td style="text-align: center;"><a href="index.html"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><img
+                        src="PngItem_2522307.png" alt="E" title="e" style="width: 90px; height: 146px;"></span></a></td>
                 <td><span style="color: rgb(255, 255, 255); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 32px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"></span><span
                     style="box-sizing: border-box; font-family: Verdana, Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; color: rgb(255, 255, 255); line-height: 1.2em;">SEARCH
                     FOR GRAVITATIONAL WAVES</span><span style="box-sizing: border-box; font-family: Verdana, Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; color: rgb(255, 255, 255); line-height: 1.2em;"><br
