--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -109,21 +109,22 @@
           <!--
 following 5 lines required to use Caltech Library Services for registering our DOIs for open data releases when a DOI exists.-->
           <br>
-          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf">PDF
-                Work Itinerary</a></b></div>
+          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"
+                target="_blank">PDF Work Itinerary</a></b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><br>
               </a></b></div>
           <div style="text-align: center;"><b><i>LINKS EXTERNAL INFORMATION</i><br>
             </b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><br>
               </a></b></div>
-          <div style="text-align: center;"><b><a href="https://gracedb.ligo.org/superevents/public/O3/">PUBLIC
-                ALERT BY LIGO (EXTERNAL DATA)<br>
+          <div style="text-align: center;"><b><a href="https://gracedb.ligo.org/superevents/public/O3/"
+                target="_blank">PUBLIC ALERT BY LIGO (EXTERNAL DATA)<br>
               </a></b></div>
-          <div style="text-align: center;"><b><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy">GRAVITY
-                SPY<br>
+          <div style="text-align: center;"><b><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"
+                target="_blank">GRAVITY SPY<br>
               </a></b></div>
-          <div style="text-align: center;"><b><a href="LEARN.html">LEARN GRAVITY<br>
+          <div style="text-align: center;"><b><a href="LEARN.html" target="_blank">LEARN
+                GRAVITY<br>
               </a></b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"></a></b><br>
           </div>
