--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -33,13 +33,14 @@
       <div class="row">
         <div class="col-sm-2  col-sm-offset-0" style="padding: 10px 10px;"><a href="https://www.gw-openscience.org/">
           </a> </div>
-        <div class="col-sm-10" style="padding: 40px 10px;"> <span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span></div>
-        <div class="col-sm-10" style="padding: 40px 10px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span>
+        <div class="col-sm-10" style="padding: 10px 10px;"> <span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span></div>
+        <div class="col-sm-10" style="padding: 10px 10px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span>
           <table style="width: 893px; height: 285px;" border="0">
             <tbody>
               <tr>
-                <td><a href="https://www.gw-openscience.org/"><img src="PngItem_2522307.png"
-                      style="max-width:140px" alt="Einstein" title="Einstein" width="100%"></a></td>
+                <td><a href="https://www.gw-openscience.org/" target="_blank"><img
+                      src="PngItem_2522307.png" style="max-width:140px" alt="Einstein"
+                      title="Einstein" width="100%"></a></td>
                 <td><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">SEARCH
                     FOR GRAVITATIONAL WAVES</span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><br>
                     GAMMA RAYS - SUPERNOVA&nbsp; AND<br>
