--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -35,20 +35,18 @@
           </a> </div>
         <div class="col-sm-10" style="padding: 10px 10px;"> <span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span></div>
         <div class="col-sm-10" style="padding: 10px 10px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span>
-          <table style="width: 893px; height: 285px;" border="0">
+          <table style="width: 986px; height: 285px;" border="0">
             <tbody>
               <tr>
-                <td><a href="https://www.gw-openscience.org/" target="_blank"><img
-                      src="PngItem_2522307.png" style="max-width:140px" alt="Einstein"
-                      title="Einstein" width="100%"></a></td>
-                <td><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">SEARCH
+                <td style="width: 155px;"><a href="https://www.gw-openscience.org/"
+                    target="_blank"><img src="PngItem_2522307.png" style="max-width:140px"
+                      alt="Einstein" title="Einstein" width="100%"></a></td>
+                <td style="width: 626px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">SEARCH
                     FOR GRAVITATIONAL WAVES</span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><br>
                     GAMMA RAYS - SUPERNOVA&nbsp; AND<br>
                   </span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">ELECTROMAGNETIC
                     EMISSION</span></td>
-              </tr>
-              <tr>
-                <td colspan="2" style="text-align: center;"><img src="pngegg.png"
+                <td style="margin-left: 151px; width: 108px;"><img src="pngegg.png"
                     alt="NASA" title="NASA" style="width: 142px; height: 133px;"></td>
               </tr>
             </tbody>
