--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -88,7 +88,8 @@ following 5 lines required to use Caltech Library Services for registering our D
                       <br>
                       <br>
                       GraceDB: <a href="gracedb.ligo.org/superevents/S190814bv/index.html"
-                        style="color:#9FF">S190814bv (HERE DEMO LINK)</a> <br>
+                        style="color:#9FF" target="_blank">S190814bv (HERE DEMO
+                        LINK)</a> <br>
                       <br>
                       GCN: <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/notices_l/S190814bv.lvc">Notices</a>
                       • <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/other/GW190814bv.gcn3">Circulars</a>
@@ -99,8 +100,8 @@ following 5 lines required to use Caltech Library Services for registering our D
                       <div class="card-body" style="word-wrap:break-word;"><br>
                       </div>
                       <div class="card-body" style="word-wrap:break-word;">Tresuremap
-                        Link: <a href="http://treasuremap.space/alerts?graceids=S190930t">s19
-                          (HERE DEMO LINK)</a><br>
+                        Link: <a href="http://treasuremap.space/alerts?graceids=S190930t"
+                          target="_blank">s19 (HERE DEMO LINK)</a><br>
                       </div>
                       <div class="card-body" style="word-wrap:break-word;"><br>
                       </div>
