--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -125,7 +125,10 @@ following 5 lines required to use Caltech Library Services for registering our D
           <div style="text-align: center;"><b><a href="LEARN.html" target="_blank">LEARN
                 GRAVITY<br>
               </a></b></div>
-          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"></a></b><br>
+          <div style="text-align: center;"><b><a href="HOWPROCESSDATALIGO.html"
+                target="_blank">HOW TO PROCESS DATA LIGO<br>
+              </a></b></div>
+          <div style="text-align: center;"><br>
           </div>
           <div class="tablesaw-overflow">
             <table class="tablesaw" data-tablesaw-sortable="" data-tablesaw-sortable-switch=""
