--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -128,6 +128,9 @@ following 5 lines required to use Caltech Library Services for registering our D
           <div style="text-align: center;"><b><a href="HOWPROCESSDATALIGO.html"
                 target="_blank">HOW TO PROCESS DATA LIGO<br>
               </a></b></div>
+          <div style="text-align: center;"><b><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"
+                target="_blank">LIGO ANDROID<br>
+              </a></b></div>
           <div style="text-align: center;"><br>
           </div>
           <div class="tablesaw-overflow">
