--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -34,12 +34,11 @@
                 <td style="text-align: center;"><a href="index.html"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><img
                         src="PngItem_2522307.png" alt="E" title="e" style="width: 90px; height: 146px;"></span></a></td>
                 <td><span style="color: rgb(255, 255, 255); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 32px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"></span><span
-                    style="box-sizing: border-box; font-family: Verdana, Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; color: rgb(255, 255, 255); line-height: 1.2em;">SEARCH
-                    FOR GRAVITATIONAL WAVES</span><span style="box-sizing: border-box; font-family: Verdana, Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; color: rgb(255, 255, 255); line-height: 1.2em;"><br
-                      style="box-sizing: border-box;">
-                    GAMMA RAYS - SUPERNOVA&nbsp; AND<br style="box-sizing: border-box;">
-                  </span><span style="box-sizing: border-box; font-family: Verdana, Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; color: rgb(255, 255, 255); line-height: 1.2em;">ELECTROMAGNETIC
-                    EMISSION</span></td>
+                    style="font-size:2.0em;color:#FFF;line-height:1.2em;">BUSQUEDA
+                    DE ONDAS GRAVITACIONALES</span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><br>
+                    RAYOS GAMMA - SUPERNOVA&nbsp; Y<br>
+                  </span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">EMISIONES
+                    ELECTROMAGNÉTICAS</span><span style="box-sizing: border-box; font-family: Verdana, Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; color: rgb(255, 255, 255); line-height: 1.2em;"></span></td>
               </tr>
             </tbody>
           </table>
@@ -72,24 +71,24 @@ following 5 lines required to use Caltech Library Services for registering our D
               <table style="width: 100%" border="0">
                 <tbody>
                   <tr>
-                    <td><a href="/o3_eventdata_docs/" style="color:#9FF">Documentation</a>
+                    <td><a href="/o3_eventdata_docs/" style="color:#9FF">Documentación</a>
                       <br>
                       <br>
-                      Version: v1 <br>
+                      Versión: v1 <br>
                       <br>
-                      All Versions: <a href="/eventapi/html/O3_Discovery_Papers/GW190814/v1/"
+                      All Versiones: <a href="/eventapi/html/O3_Discovery_Papers/GW190814/v1/"
                         style="color:#9FF"> v1</a> <br>
                       <br>
                       GPS: 1249852257.0<br>
                       <br>
                       UTC Time: 2019-08-14 21:10 <br>
                       <br>
-                      Catalog: <a href="../.." style="color:#9FF">O3_Discovery_Papers</a>
+                      Catalogo: <a href="../.." style="color:#9FF">O3_Discovery_Papers</a>
                       <br>
                       <br>
                       GraceDB: <a href="gracedb.ligo.org/superevents/S190814bv/index.html"
-                        style="color:#9FF" target="_blank">S190814bv (HERE DEMO
-                        LINK)</a> <br>
+                        style="color:#9FF" target="_blank">S190814bv (AQUÍ UN
+                        DEMO LINK)</a> <br>
                       <br>
                       GCN: <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/notices_l/S190814bv.lvc">Notices</a>
                       • <a style="color:#9FF" href="https://gcn.gsfc.nasa.gov/other/GW190814bv.gcn3">Circulars</a>
@@ -101,7 +100,7 @@ following 5 lines required to use Caltech Library Services for registering our D
                       </div>
                       <div class="card-body" style="word-wrap:break-word;">Tresuremap
                         Link: <a href="http://treasuremap.space/alerts?graceids=S190930t"
-                          target="_blank">s19 (HERE DEMO LINK)</a><br>
+                          target="_blank">s19 (AQUI UN DEMO LINK)</a><br>
                       </div>
                       <div class="card-body" style="word-wrap:break-word;"><br>
                       </div>
@@ -784,7 +783,7 @@ FrameChannels: [ H1:DCS-CALIB_STRAIN_CLEAN_C01, L1:DCS-CALIB_STRAIN_CLEAN_C01, V
     <footer class="page-footer" style="background:#474;">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-12">DEMO PAGE<br>
+          <div class="col-sm-12">PÁGINA DEMOSTRATIVA<br>
           </div>
         </div>
         <div class="row">
