--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -115,7 +115,7 @@ following 5 lines required to use Caltech Library Services for registering our D
           <div class="card" style="color:black;background-color:#EEE; padding:20px; margin-top:20px;margin-bottom:20px">
             <div class="card-body">
               <div style="text-align: center;">
-                <h1><b><u>ADVANCED DATA</u></b></h1>
+                <h1><b><u>DATOS AVANZADOS</u></b></h1>
               </div>
               <div style="white-space:pre-wrap; word-break:normal;">	 </div>
             </div>
