--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -90,6 +90,8 @@
               style="color:#000"><span class="glyphicon glyphicon-question-sign"></span>
               Help</a> </div>
           <h1>Eventos Destacados</h1>
+          <h1>Datos Centralizados</h1>
+          <p></p>
           <p></p>
           <table style="width: 100%" border="0">
             <tbody>
