--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -66,7 +66,8 @@ following 5 lines required to use Caltech Library Services for registering our D
           <div class="card" style="color:white;padding:20px; background-color:#1d91fd;">
             <div class="card-body" style="word-wrap:break-word;">
               <div style="text-align: center;">
-                <h1><u><b>DATA HUB</b></u></h1>
+                <h1><u><b>DATOS CENTRALIZADOS<br>
+                    </b></u></h1>
               </div>
               <table style="width: 100%" border="0">
                 <tbody>
